k8s/ai-platform/librechat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat
  labels:
    app.kubernetes.io/name: librechat
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: librechat

  template:
    metadata:
      labels:
        app.kubernetes.io/name: librechat
    spec:
      serviceAccountName: librechat
      securityContext:
        fsGroup: 2000
      containers:
        - name: librechat
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
          image: ghcr.io/danny-avila/librechat:latest@sha256:c5db3331b845e1f289f8d04c0c77936c4bbe372f76730a804abc1c37e44d23a9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3080
          readinessProbe:
            httpGet:
              path: /health
              port: 3080
          volumeMounts:
            - name: librechat-config-volume
              mountPath: /app/librechat.yaml
              subPath: librechat.yaml
              readOnly: true
            - name: librechat-images
              mountPath: /app/client/public/images
      volumes:
        - name: librechat-config-volume
          configMap:
            name: librechat-config
        - name: librechat-images
          emptyDir: {}
