k8s/ai-platform/librechat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat
  labels:
    app.kubernetes.io/name: librechat
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
    - port: 3080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: librechat
